force-app/main/default/objects/Pilgrim_Detail__c/Pilgrim_Detail__c.object-meta.xml
<CustomObject>
    <description>Database for Mirza Tour &amp; Travel</description>
    <label>Pilgrim Detail</label>
    <nameField>
        <label>Pilgrim&apos;s Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pilgrim Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>