force-app/main/default/objects/Pilgrim_Detail__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address of the Pilgrim</description>
    <inlineHelpText>Pilgrim&apos;s Address</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>