force-app/main/default/objects/Pilgrim_Detail__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Fill the age of the pilgrim</description>
    <inlineHelpText>Age of the Pilgrim</inlineHelpText>
    <label>Age:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>