force-app/main/default/objects/Pilgrim_Detail__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Date of Birth of the Pilgrim</description>
    <label>Date of Birth:</label>
    <type>Date</type>
</CustomField>