force-app/main/default/objects/Pilgrim_Detail__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Details of the Packages Available</description>
    <label>Package</label>
    <referenceTo>Packages__c</referenceTo>
    <relationshipLabel>Pilgrim Detail</relationshipLabel>
    <relationshipName>Pilgrim_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>