force-app/main/default/objects/Pilgrim_Detail__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <formula>Visa_Detail__r.Passport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport</label>
    <type>Text</type>
</CustomField>