force-app/main/default/objects/Pilgrim_Detail__c/fields/Visa_Detail__c.field-meta.xml
<CustomField>
    <fullName>Visa_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visa Detail</label>
    <referenceTo>Visa_Detail__c</referenceTo>
    <relationshipLabel>Pilgrim Detail</relationshipLabel>
    <relationshipName>Pilgrim_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>