force-app/main/default/objects/Pilgrim_Detail__c/validationRules/Authentication4Passport.validationRule-meta.xml
<ValidationRule>
    <fullName>Authentication4Passport</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( REGEX( Passport__c ,&quot;^[ A-Z 0-9]*$&quot;) )</errorConditionFormula>
    <errorMessage>Start with Apphabet</errorMessage>
</ValidationRule>